--- a/nogg.pc.in
+++ b/nogg.pc.in
@@ -8,5 +8,5 @@ Description: Decoder library for Ogg Vorbis streams
 Version: @VERSION@
 Requires:
 Conflicts:
-Libs: -L${libdir} -lnogg
+Libs: -L${libdir} -lnogg -lm
 Cflags: -I${includedir}
