--- a/.hgignore
+++ b/.hgignore
@@ -7,6 +7,7 @@ syntax: glob
 syntax: regexp
 ^coverage.txt$
 ^libnogg\.
+^nogg-benchmark$
 ^nogg-decode$
 ^tests/coverage$
 ^tests/coverage-tests\.h$
